kubernetes/pihole/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-only
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/16
      - 10.0.0.0/8
      - 172.16.0.0/12
