kubernetes/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
